# parallels

./: README.md  literary_config.json  pyproject.toml  setup.cfg
parallels/: concurrent.ipynb  dask_.ipynb  executor.ipynb  futures.ipynb  ray_.ipynb  wrap.ipynb
src/parallels/: __init__.ipynb  concurrent.ipynb  dask_.ipynb  executor.ipynb  futures.ipynb
