[tool.poetry]
name = "parallels"
version = "0.1.0"
description = "An asyncio API that mimics concurrent.futures, with support for task-graph executors"
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
literary = "^1.7.0"
jupyterlab = "^3.0.14"
jlab-enhanced-cell-toolbar = "^3.2.1"
black = "^21.5b0"
jupyterlab-code-formatter = "^1.4.10"
isort = "^5.8.0"
jupyterlab-lsp = "^3.6.0"
python-lsp-server = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
